fix vertical align

--- a/Vertical align/style.css
+++ b/Vertical align/style.css
@@ -33,6 +33,7 @@ body{
 
 .box-content-wrp{
 	display: inline-block;
+	vertical-align: middle;
 	width: 100%;
 }
 
